--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,8 @@
 greenlet==1.0.0
 importlib-metadata==4.0.1
+PyQt5==5.15.4
+PyQt5-Qt5==5.15.2
+PyQt5-sip==12.8.1
 SQLAlchemy==1.4.11
 typing-extensions==3.7.4.3
 zipp==3.4.1
